Changelog
=========

2.2.7 (unreleased)
------------------

- Pull value for link_redirect setting from the configuration registry.
  [esteele]

2.2.6 (2015-07-18)
------------------

- createObject moved to Archetpyes.
  [tomgross]

- Add CSRF authenticator in createObject script
  [ebrehault]


2.2.5 (2015-05-04)
------------------

- Move tests from PloneTestCase to plone.app.testing.
  [tomgross,timo]

- Set language settings in setupPortalContent on the new registry.
  [timo]


2.2.4 (2015-03-26)
------------------

- Merge PLIP 13091, plone.app.multilingual
  [bloodbare]

2.2.3 (2015-03-08)
------------------

- Define ``default_page_types`` in the ``propertiestool.xml`` profile.
  [thet]

- Add profile 'base' to allow addons to depend on ATContentTypes in Plone 5
  without uninstalling the dexterity default-types.
  [pbauer]


2.2.2 (2014-10-23)
------------------

- Update template markup to match Barcelonetta
  [albertcasado, sneridagh]

- Remove deprecated imports.
  [tomgross]


2.2.1 (2014-04-13)
------------------

- Remove DL's from portalMessage templates.
  https://github.com/plone/Products.CMFPlone/issues/153
  [khink]


2.2.0 (2014-03-01)
------------------

- Don't use spamProtect script in event_view; it doesn't do much.
  [davisagli]

- Use the new member search form as the layout for the Members folder.
  [davisagli]

- Moved Products.CMFFormController dependency
  from Products.CMFPlone to Products.ATContentTypes (PLIP #13770)
  [ale-rt]

- Moved portal_factory and portal_metadata from Products.CMFPlone
  to Products.ATContentTypes. (PLIP #13770)
  [ale-rt]

- Remove test_discussion test which tests the old discussion (pre Plone 4.1)
  tool.
  [timo]

- Add 'content' profile which adds demo/test content.
  This used to be in CMFPlone and is still used by PloneTestCase
  in Plone 5.
  [davisagli]

- Update ICONMAP (.gif to .png).
  [mathias.leimgruber]

- Move content type profile definitions from Products.CMFPlone into here.